fix/advancepetty